<resources>
    <string name="app_name">Cyber</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="prompt_question">Question</string>
    <string name="res1">Even if an email looks like it\'s from someone you know, take care with attachments. Take that extra second to avoid walking into a digitally dangerous situation. Don\'t reply to the email because the sender\'s identity might have been compromised.</string>
    <string name="res_header1">1. Think twice before clicking on links or opening attachments.</string>
    <string name="head2">2. Verify requests for private information.</string>
    <string name="text2">Whenever you are requested to provide private information (yours or anyone else\'s), verify the identity of the requester — even if it appears to be somebody you know. Con artists are clever in how they collect information to steal information and identities. Even if you think you\'re safe, regularly check your financial statements and credit reports.</string>
    <string name="head3">3. Protect your passwords.</string>
    <string name="text3">Never reveal your passwords to anyone. Make them long, strong, unique and use multi-factor authentication (MFA) wherever possible. Use a password manager such as LastPass or RoboForm. Use different passwords for different accounts. Use different passwords for work and home. Don\'t let apps and websites remember your passwords.</string>
    <string name="head4">4. Protect your stuff!</string>
    <string name="text4">Keep a close eye on your belongings when you\'re in public places. Lock things up or take them with you before you leave, even if you’ll only be away for a second. When you\'re at work, secure your area and lock your computer screen before leaving your desk. Take your phone and other portable items with you.</string>
    <string name="linked">Sign In With Linkedin</string>
    <string name="twitter">Sign In With Twitter</string>
    <string name="google">Sign In With Google</string>
    <string name="facebook">Sign In With Facebook</string>
    <string name="res_header">Cyber Resources</string>
    <string-array name="answers_question1">
        <item>Select an Option..</item>
        <item>zero</item>
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four+</item>
    </string-array>
</resources>
