<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/hexagonbg1"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.ResourceActivity">

    <LinearLayout
        android:id="@+id/res_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="4dp"
            app:backgroundTint="#36454F"
            android:enabled="true"
            android:background="@drawable/back"/>

        <TextView
            android:id="@+id/cyber_Header"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:text="@string/res_header"
            android:textSize="40sp"
            android:textColor="#36454F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/resources"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/res_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

            <LinearLayout
                android:id="@+id/resource_scroll"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/res1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/cyber_Header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/one"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/header1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:text="@string/res_header1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/res1" />

                <LinearLayout
                    android:id="@+id/res2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/cyber_Header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/two"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/header2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:text="@string/head2" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/text2" />

                <LinearLayout
                    android:id="@+id/res3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/cyber_Header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/three"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/header3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:text="@string/head3" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/text3" />

                <LinearLayout
                    android:id="@+id/res4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/cyber_Header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/four"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/header4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:text="@string/head4" />

                </LinearLayout>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/text4" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
